# GOLSerial

./: .gitignore  CMakeLists.txt  README.md  main.cpp
includes/: Cell.hpp  GameOfLife.hpp  Neighbors.hpp  Rules.hpp  TextLoader.hpp
src/Cell/: Cell.cpp
src/GameOfLife/: GameOfLife.cpp  GameOfLive.cpp
src/Neighbors/: Neighbors.cpp
src/Rules/: Rules.cpp
src/TextLoader/: TextLoader.cpp
